modules/mod-vpc/vpc.tf
# Define our VPC
resource "aws_vpc" "vpc" {
  cidr_block = "${var.vpc_cidr}"
  enable_dns_hostnames = true

  tags = {
    Name = "${var.env_name}-vpc"
  }
}
